--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angularfire2": "^5.2.3",
-    "firebase": "^7.4.0",
+    "firebase": "^7.5.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-webcam": "^0.2.6",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
+    "webcam": "^3.2.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
