added dashboard functioality

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-webcam": "^0.2.6",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
+    "sha1": "^1.1.1",
     "tslib": "^1.10.0",
     "webcam": "^3.2.1",
     "zone.js": "~0.9.1"
